Phase 2 F3/F4 — fix: owner-perspective F3 linkUVec (bench PASS)
Both threads on a chain pair now compute the SAME owner-perspective
linkUVec (owner = lower move-slot index, inline from i < topoEnd*Slot
— no atomics, no visited flags, no cross-slot writes). Per-thread F3
forces come out exactly anti-parallel by construction: +forceMag·linkUVec
on the owner, −forceMag·linkUVec on the non-owner. R lever arm and F4
torsion path unchanged.

Validations on aorus:
* HeldChainF3F4Diag θ-sweep: pair-force sum = (0,0,0) at every θ
  (was forceMag·sinθ leak); DEV per-thread forces match CPU's ±pair
  bit-for-bit; DEV F3 torque on non-owner matches CPU's nonzero value
  (was zero from the wrong-direction artifact).
* SingleFilDiag arm A 100k steps: max |coord.y|=|coord.z|=0.0 µm. PASS.
* -bmDiag -gpu arm A 200k steps: ratio=1.000107 (was 1.262114; baseline
  1.000049, gate +0.146%). PASS.

Default flipped: DIAG_CPU_F3F4 = false (device active by default);
BOA_DIAG_CPU_F3F4=1 re-routes through CPU pair for clean A/B.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>